--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1133,3 +1133,15 @@ input:checked + .toggle-slider:before {
     background-position: 0% 50%;
   }
 }
+.text-gray-800 {
+    --tw-text-opacity: 1;
+    color: rgb(31 41 55 / var(--tw-text-opacity, 1));
+}
+.bg-blue-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(45 64 89);
+}
+.bg-gray-50 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(87 87 87);
+}
